--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   google_maps_flutter: ^2.1.1
+  responsive_sizer: ^3.0.5+1
 
 dev_dependencies:
   flutter_test:
