Add provider state management

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   http: ^0.13.4
   google_maps_flutter: ^2.1.1
   responsive_sizer: ^3.0.5+1
+  provider: ^6.0.0 
 
 dev_dependencies:
   flutter_test:
